--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: batch
   profiles:
     active: local
     group:
@@ -9,6 +11,9 @@ spring:
   devtools:
     livereload:
       enabled: false
+    restart:
+      enabled: false
+      log-condition-evaluation-delta: false
   jpa:
 #    database: mysql
 #    database-platform: org.hibernate.dialect.MySQLDialect
@@ -29,5 +34,4 @@ spring:
     job:
       enabled: false
     jdbc:
-
       initialize-schema: always
