--- a/src/main/resources/logback-dev.properties
+++ b/src/main/resources/logback-dev.properties
@@ -1,4 +1,4 @@
-log.config.path=/home/batch/logs
+log.config.path=/data/logs/dev/batch
 log.config.app.error.name=batch_dev_app_error
 log.config.app.warn.name=batch_dev_app_warn
 log.config.sql.error.name=batch_dev_sql_error
