--- a/src/main/resources/logback-prod.properties
+++ b/src/main/resources/logback-prod.properties
@@ -1,4 +1,4 @@
-log.config.path=/home/batch/logs
+log.config.path=/data/logs/prod/batch
 log.config.app.error.name=batch_prod_app_error
 log.config.app.warn.name=batch_prod_app_warn
 log.config.sql.error.name=batch_prod_sql_error
