--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 }
 
 dependencies {
+    implementation project(':common-core')
+    implementation project(':common-database')
+    implementation project(':common-log')
+
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
