--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -131,7 +131,7 @@ database:
         maximum-pool-size: 8
         connection-timeout: 30000
         maxLifetime: 1800000
-    music:
+    webhook:
       master:
         url: jdbc:mysql://210.123.252.85:13306/CRAWLING?zeroDateTimeBehavior=convertToNull&useLegacyDatetimeCode=false&serverTimezone=Asia/Seoul&noAccessToProcedureBodies=true&useSSL=false&allowPublicKeyRetrieval=true
         username: root
