--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.16.1'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.23.0'
+//    implementation group: 'org.seleniumhq.selenium', name: 'selenium-devtools-v86', version: '4.14.1'
     //json
     implementation group: 'org.json', name: 'json', version: '20231013'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
