server-cloud-service 구조 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,6 +6,11 @@ spring:
     activate:
       on-profile: local
 
+feign:
+  client:
+    server-cloud:
+      url: "http://localhost:20200/service/batch"
+
 crawl:
   naver:
     url: "https://m.stock.naver.com/domestic/index/KOSPI/total"
